[tool.poetry]
name = "iavanna-vanna-streamlit"
version = "0.1.0"
description = ""
authors = ["iosub <1330995+iosub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
vanna = "^0.7.2"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
